LP-4: Create collection item. Request
