# docs/swagger.yaml
@@ -77,28 +77,36 @@ paths:
           schema:
             $ref: "#/definitions/ValidationErrorResponseModel"
 
-  /v1/file-storage/settings:
-    put:
+  /v1/collections/{collectionId}/items:
+    post:
       tags:
-        - settings
-      summary: Update settings of file storage
-      description: Update settings of file storage
+        - collection items
+      summary: Create collection item
+      description: Create item for specific collection
       produces:
         - application/json
       consumes:
         - application/json
       parameters:
-        - name: "UpdateFileStorageSettingsRequestBody"
+        - in: path
+          name: collectionId
+          required: true
+          type: number
+        - name: "CreateCollectionItemRequestBody"
           in: body
-          description: "Request body for updating of file storage settings"
+          description: "Request body for creation of collection item"
           required: true
           schema:
-            $ref: "#/definitions/UpdateFileStorageSettingsRequestModel"
+            $ref: "#/definitions/CreateCollectionItemRequestModel"
       responses:
         200:
           description: "Successfull operation"
           schema:
             $ref: "#/definitions/DefaultSuccessResponseModel"
+        404:
+          description: "Not found error"
+          schema:
+            $ref: "#/definitions/NotFoundErrorResponseModel"
         422:
           description: "Validation error"
           schema:
@@ -136,6 +144,17 @@ definitions:
       name:
         type: string
 
+  # Create collection item
+  CreateCollectionItemRequestModel:
+    type: object
+    required:
+      - name
+    properties:
+      name:
+        type: string
+      file:
+        $ref: "#/definitions/CreateFileRequestModel"
+
   # Update file storage settings
   UpdateFileStorageSettingsRequestModel:
     type: object
@@ -160,7 +179,7 @@ definitions:
       endpoint:
         type: string
 
-      # Common
+  # Common
   DefaultSuccessResponseModel:
     type: object
     properties:
@@ -174,3 +193,21 @@ definitions:
     properties:
       errors:
         type: object
+
+  NotFoundErrorResponseModel:
+    type: object
+    properties:
+      success:
+        type: boolean
+      message:
+        type: string
+
+  CreateFileRequestModel:
+    type: object
+    properties:
+      name:
+        type: string
+      mime:
+        type: string
+      content:
+        type: string
